--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                     <ul>
                         <li><a href="index.html" style="text-align: left;">HOME</a></li>
                         <li><a href="Resume.html" style="text-align: left;">RESUME</a></li>
-                        <li><a href="aboutme.html" style="text-align: left;">ABOUT ME</a></li>
+                        <li><a href="aboutme.html" style="text-align: left;">ABOUT</a></li>
                     </ul>
                 </div>
         </div>
