--- a/aboutme.html
+++ b/aboutme.html
@@ -159,7 +159,7 @@ footer p:nth-child(2){
                     <ul>
                         <li><a href="index.html" style="text-align: left;">HOME</a></li>
                         <li><a href="Resume.html" style="text-align: left;">RESUME</a></li>
-                        <li><a href="#" style="text-align: left;">ABOUT ME</a></li>
+                        <li><a href="#" style="text-align: left;">ABOUT</a></li>
                     </ul>
                 </div>
         </div>
