--- a/aboutme.html
+++ b/aboutme.html
@@ -191,7 +191,7 @@ footer p:nth-child(2){
             </div>
                 <p id="download">DOWNLOAD MY RESUME</p>
                 <button class="btn">
-                  <a href="004.pdf" download>
+                  <a href="Resume.pdf" download>
                      <b> Resume</b>
                   </a>
               </button>
