just one effect looks good

--- a/Resume.html
+++ b/Resume.html
@@ -23,10 +23,10 @@
 
         <div class="color">
             <h3>
-                <span id="designer" style="color: #F39C12;">BOLD</span>&nbsp;&nbsp;
-                <span id="designer" style="color: #45B39D;">COLORFUL</span>&nbsp;&nbsp;
+                <span id="designer" style="color: #F39C12;">BOLD COLORFUL VERSATILE DESIGNER</span>&nbsp;&nbsp;
+                <!-- <span id="designer" style="color: #45B39D;">COLORFUL</span>&nbsp;&nbsp;
                 <span id="designer" style="color: #F1948A;">VERSATILE</span>&nbsp;&nbsp;
-                <span id="designer" style="color: #CCCCFF;">DESIGNER</span>
+                <span id="designer" style="color: #CCCCFF;">DESIGNER</span> -->
             </h3>
         </div>
 
