--- a/Resume.html
+++ b/Resume.html
@@ -40,17 +40,20 @@
         
         <div class="location">
             <br>
-            <p id="india" style="color: #F39C12; font-size: 20px; line-height: 1.9;" ><b>JAN 2020 - APRIL 2020 | PRIME DESIGN COMPANY | INDIA</b></p>
-            <p id="position"><b>SOFTWARE DEVELOPER</b></p>
+            <p id="india" style="color: #F39C12; font-size: 20px; line-height: 1.9;" ><b>JAN 2019 - APRIL 2020 | PRIME DESIGN COMPANY | INDIA</b></p>
+            <p id="position"><b>WEB DEVELOPER</b></p>
             <div class="detail" style="line-height: 1.6;">
                 <ul>
-                    <li>Work on variety of software tasks and projects.</li>
-                    <li>Research new technologies and incorporates them into new systems and products.</li>
-                    <li>Takes initiative in leading projects and collaborating with others.</li>
-                    <li>Tests, integrates, writes, troubleshoots, and debugs software applications.</li>
-                    <li>Responsible for the architecture and implementation of critical software components.</li>
-                    <li>Work to improve the efficiency and functionality of current systems and products.</li>
-                    <li>Update current products and develop new ones to product specifications.</li>
+                    <li>Understanding UI, cross-browser compatibility, and general web functionality and standards.</li>
+                    <li>Utilizing web applications and programming languages.</li>
+                    <li>Meeting with clients or management to discuss the design plan
+and needs of the website.</li>
+                    <li>Writing code for the website.</li>
+                    <li>Collaborating with team members to determine the website’s
+layout, content, and design.</li>
+                    <li>Integrating graphics, audio, and video into the website.</li>
+                    <li>Creating and testing applications for the website.</li>
+                    <li>Monitoring website traffic and making adjustments.</li>
                 </ul>
             </div>
         </div>
